fix sidebar z-index

--- a/src/style.scss
+++ b/src/style.scss
@@ -52,6 +52,7 @@ html {
 		top: 55px;
 		background-color: rgba(0,0,0,0.5);
 		overflow-y: hidden;
+		z-index: 999;
 	}
 }
 
